add new website from server na

--- a/xem-phim-moi/dac-vu-tai-gia/index.html
+++ b/xem-phim-moi/dac-vu-tai-gia/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-no-lon-phan-9" title="Vụ nổ lớn (Phần 9)">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-dau-si-saint-seiya-minh-vuong-hades-elysion" title="Thánh Đấu Sĩ Saint Seiya: Minh Vương Hades – Elysion">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-no-lon-phan-9-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-dau-si-saint-seiya-minh-vuong-hades-elysion-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vụ nổ lớn (Phần 9)
+             Thánh Đấu Sĩ Saint Seiya: Minh Vương Hades – Elysion
             </span>
             <span class="list-top-movie-item-en">
-             The Big Bang Theory (Season 9)
+             Saint Seiya: Meiou Hades Elysion-hen Saint Seiya: The Hades Chapter - Elysion
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,18 +1807,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-giet-liberty-valance" title="Người Giết Liberty Valance">
+          <a class="list-top-movie-link" href="/phim-moi/toi-la-ke-sat-nhan-sau-phong-thich" title="TÔI LÀ KẺ SÁT NHÂN: SAU PHÓNG THÍCH">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-giet-liberty-valance-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-la-ke-sat-nhan-sau-phong-thich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Giết Liberty Valance
+             TÔI LÀ KẺ SÁT NHÂN: SAU PHÓNG THÍCH
             </span>
             <span class="list-top-movie-item-en">
-             The Man Who Shot Liberty Valance
+             I AM A KILLER: RELEASED
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/goi-em-bang-ten-anh" title="Gọi em bằng tên anh">
+           <span class="status">
+            Full HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goi-em-bang-ten-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gọi em bằng tên anh
+            </span>
+            <span class="list-top-movie-item-en">
+             Call Me by Your Name
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1829,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-thay-pha-che" title="Bậc thầy pha chế">
+          <a class="list-top-movie-link" href="/phim-moi/dau-gau-dung-dau-dat" title="Đầu Gấu Đụng Đầu Đất">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-thay-pha-che-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-gau-dung-dau-dat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bậc thầy pha chế
+             Đầu Gấu Đụng Đầu Đất
             </span>
             <span class="list-top-movie-item-en">
-             Drink Masters
+             Bear Man
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1851,43 +1873,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/me-tuyet-voi" title="Mẹ tuyệt vời">
+          <a class="list-top-movie-link" href="/phim-moi/cam-nang-khoi-nghiep" title="Cẩm Nang Khởi Nghiệp">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-tuyet-voi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-nang-khoi-nghiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mẹ tuyệt vời
+             Cẩm Nang Khởi Nghiệp
             </span>
             <span class="list-top-movie-item-en">
-             Wonderful Mum
+             All Over The Workplace
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-cau" title="Lời Nguyện Cầu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-cau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lời Nguyện Cầu
-            </span>
-            <span class="list-top-movie-item-en">
-             The Prayer
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
