add new website from server na

--- a/xem-phim-moi/dac-vu-tai-gia/index.html
+++ b/xem-phim-moi/dac-vu-tai-gia/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-dau-si-saint-seiya-minh-vuong-hades-elysion" title="Thánh Đấu Sĩ Saint Seiya: Minh Vương Hades – Elysion">
+          <a class="list-top-movie-link" href="/phim-moi/cangaco-novo" title="Cangaco Novo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-dau-si-saint-seiya-minh-vuong-hades-elysion-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cangaco-novo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thánh Đấu Sĩ Saint Seiya: Minh Vương Hades – Elysion
+             Cangaco Novo
             </span>
             <span class="list-top-movie-item-en">
-             Saint Seiya: Meiou Hades Elysion-hen Saint Seiya: The Hades Chapter - Elysion
+             New Bandits
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thua-me-con-di" title="Thưa mẹ con đi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thua-me-con-di-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thưa mẹ con đi
+            </span>
+            <span class="list-top-movie-item-en">
+             Goodbye Mother
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,21 +1829,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-la-ke-sat-nhan-sau-phong-thich" title="TÔI LÀ KẺ SÁT NHÂN: SAU PHÓNG THÍCH">
+          <a class="list-top-movie-link" href="/phim-moi/tan-van-cong-truyen-ky" title="Tấn Văn Công Truyền Kỳ">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-van-cong-truyen-ky-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tấn Văn Công Truyền Kỳ
+            </span>
+            <span class="list-top-movie-item-en">
+             Tấn Văn Công Truyền Kỳ
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/luoi-cua-ii" title="Lưỡi cưa II">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-la-ke-sat-nhan-sau-phong-thich-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luoi-cua-ii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             TÔI LÀ KẺ SÁT NHÂN: SAU PHÓNG THÍCH
+             Lưỡi cưa II
             </span>
             <span class="list-top-movie-item-en">
-             I AM A KILLER: RELEASED
+             Saw II
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1829,62 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/goi-em-bang-ten-anh" title="Gọi em bằng tên anh">
-           <span class="status">
-            Full HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goi-em-bang-ten-anh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Gọi em bằng tên anh
-            </span>
-            <span class="list-top-movie-item-en">
-             Call Me by Your Name
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dau-gau-dung-dau-dat" title="Đầu Gấu Đụng Đầu Đất">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-gau-dung-dau-dat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đầu Gấu Đụng Đầu Đất
-            </span>
-            <span class="list-top-movie-item-en">
-             Bear Man
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cam-nang-khoi-nghiep" title="Cẩm Nang Khởi Nghiệp">
+          <a class="list-top-movie-link" href="/phim-moi/buc-anh-ma-am-2" title="Bức Ảnh Ma Ám 2">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-nang-khoi-nghiep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buc-anh-ma-am-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cẩm Nang Khởi Nghiệp
+             Bức Ảnh Ma Ám 2
             </span>
             <span class="list-top-movie-item-en">
-             All Over The Workplace
+             The Haunted Graduation Photo 2
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
