add new website from server na

--- a/xem-phim-moi/rua-toi-cho-quy/index.html
+++ b/xem-phim-moi/rua-toi-cho-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1787,84 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doa-hong-tim-cairo" title="Đóa Hồng Tím Cairo">
+          <a class="list-top-movie-link" href="/phim-moi/nhip-dieu-hip-hop-phap" title="Nhịp điệu Hip hop: Pháp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doa-hong-tim-cairo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhip-dieu-hip-hop-phap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đóa Hồng Tím Cairo
+             Nhịp điệu Hip hop: Pháp
             </span>
             <span class="list-top-movie-item-en">
-             The Purple Rose of Cairo
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/de-phong-ke-trom" title="Đề Phòng Kẻ Trộm">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-phong-ke-trom-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đề Phòng Kẻ Trộm
-            </span>
-            <span class="list-top-movie-item-en">
-             Carry On Pickpocket
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/danh-gia-vong-toc-2" title="Danh Gia Vọng Tộc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/danh-gia-vong-toc-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Danh Gia Vọng Tộc
-            </span>
-            <span class="list-top-movie-item-en">
-             Involvement in Family Affairs
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-manh-doi" title="Những Mảnh Đời">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-manh-doi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những Mảnh Đời
-            </span>
-            <span class="list-top-movie-item-en">
-             Antares
+             Rhythm + Flow France
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1875,21 +1809,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sau-nhan-vat" title="Sáu Nhân Vật">
+          <a class="list-top-movie-link" href="/phim-moi/ke-giet-con-gai-toi" title="Kẻ giết con gái tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sau-nhan-vat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-giet-con-gai-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sáu Nhân Vật
+             Kẻ giết con gái tôi
             </span>
             <span class="list-top-movie-item-en">
-             Six Characters
+             My Daughter’s Killer
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/true-ngay-tinh-ban" title="True: Ngày tình bạn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/true-ngay-tinh-ban-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             True: Ngày tình bạn
+            </span>
+            <span class="list-top-movie-item-en">
+             True: Friendship Day
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thuoc-noi-that" title="Thuốc nói thật">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuoc-noi-that-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thuốc nói thật
+            </span>
+            <span class="list-top-movie-item-en">
+             Truth-telling drug
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giang-ho-tre-tuoi" title="Giang Hồ Trẻ Tuổi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-ho-tre-tuoi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giang Hồ Trẻ Tuổi
+            </span>
+            <span class="list-top-movie-item-en">
+             White Boy Rick
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
